--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shuttlegl",
+  "description": "ShuttleGL is JS collection of tools to develop 3D graphics, including small WebGL abstractions",
   "version": "0.0.1",
   "main": "src/index.js",
   "files": [
